Update: Sync antes de cambios en el funcionamiento de los constructores